# i4_llm_agent

./: .gitignore  .webui_secret_key  README.md  i4_llm_agent.sln  pyproject.toml
i4_llm_agent/: OpenWebUI_MemorySession_SCRIPT.py  OpenWebUI_ParameterInspectorPipe_SCRIPT.py  ToDo.txt  __init__.py  api_client.py  cache.py  context_processor.py  database.py  event_hints.py  history.py  i4_llm_agent.pyproj  inventory.py  memory.py  orchestration.py  prompting.py  scene_generator.py  session.py  state_assessment.py  utils.py  world_state_parser.py
i4_llm_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
